--- a/music-cloud-web/src/main/web/src/app/components/about/about.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/about/about.component.html
@@ -33,6 +33,7 @@
             <mat-list-item role="listitem">Улучшено отображение текста в некоторых местах</mat-list-item>
             <mat-list-item role="listitem">Панель с меню теперь автоматически закрывается после того как вы выбрали пункт на мобильных устройствах</mat-list-item>
             <mat-list-item role="listitem">Список друзей и заявок в друзья перенесен под карточку пользователя</mat-list-item>
+            <mat-list-item role="listitem">Треки автоматически переключаются при проигрывании</mat-list-item>
           </mat-list>
           <label>Ошибки</label>
           <mat-list role="list">
