--- a/music-cloud-web/src/main/web/src/app/components/about/about.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/about/about.component.html
@@ -25,7 +25,7 @@
     <mat-list>
       <mat-tab-group class="text">
         <mat-tab label="Обновления в текущей версии">
-          <label>Версия релиза 0.1.48 beta 1</label><br>
+          <label>Версия релиза 0.1.49 beta 1</label><br>
           <label>Обновления</label>
           <mat-list role="list">
             <mat-list-item role="listitem">Теперь вы можете создавать плейлисты</mat-list-item>
@@ -34,6 +34,7 @@
             <mat-list-item role="listitem">Панель с меню теперь автоматически закрывается после того как вы выбрали пункт на мобильных устройствах</mat-list-item>
             <mat-list-item role="listitem">Список друзей и заявок в друзья перенесен под карточку пользователя</mat-list-item>
             <mat-list-item role="listitem">Треки автоматически переключаются при проигрывании</mat-list-item>
+            <mat-list-item role="listitem">Теперь страница с музыкой открыта для незарегистрированных пользователей</mat-list-item>
           </mat-list>
           <label>Ошибки</label>
           <mat-list role="list">
