--- a/music-cloud-web/src/main/web/src/app/components/user-profile/user-profile.component.css
+++ b/music-cloud-web/src/main/web/src/app/components/user-profile/user-profile.component.css
@@ -50,6 +50,11 @@
 
 }
 
+.dialog-button {
+    display: flex;
+    justify-content: center;
+}
+
 @media screen and (min-width: 481px) {
     .home {
         display: flex;
