--- a/music-cloud-web/src/main/web/src/app/components/about/about.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/about/about.component.html
@@ -25,7 +25,7 @@
     <mat-list>
       <mat-tab-group class="text">
         <mat-tab label="Обновления в текущей версии">
-          <label>Версия релиза 0.1.50 beta 1</label><br>
+          <label>Версия релиза 0.2.51 beta 1</label><br>
           <label>Обновления</label>
           <mat-list role="list">
             <mat-list-item role="listitem">Теперь вы можете создавать плейлисты</mat-list-item>
@@ -35,11 +35,12 @@
             <mat-list-item role="listitem">Список друзей и заявок в друзья перенесен под карточку пользователя</mat-list-item>
             <mat-list-item role="listitem">Треки автоматически переключаются при проигрывании</mat-list-item>
             <mat-list-item role="listitem">Теперь страница с музыкой открыта для незарегистрированных пользователей</mat-list-item>
+            <mat-list-item role="listitem">Теперь вы можете обмениваться с пользователями сообщениями</mat-list-item>
           </mat-list>
           <label>Ошибки</label>
           <mat-list role="list">
             <mat-list-item role="listitem">Исправлено продолжение проигрывания музыки при выходе из приложения</mat-list-item>
-            <mat-list-item role="listitem">Вы больше не видите сами себя в списке пользователей</mat-list-item>
+            <mat-list-item role="listitem">Вы больше не видите сами себя в списке пользователей, исправлено отображение списка</mat-list-item>
             <mat-list-item role="listitem">Исправлена возможность отправки встречной заявки в друзья</mat-list-item>
             <mat-list-item role="listitem">Исправлена возможность оценки трека на странице музыки</mat-list-item>
           </mat-list>
