--- a/music-cloud-web/src/main/web/src/app/components/home/home.component.css
+++ b/music-cloud-web/src/main/web/src/app/components/home/home.component.css
@@ -67,6 +67,11 @@
     margin: 5px 5px 5px 10px;
 }
 
+.user-profile-buttons {
+    display: flex;
+    justify-content: center;
+}
+
 @media screen and (min-width: 481px) {
     .home {
         display: flex;
