group chats has been implemented

--- a/music-cloud-web/src/main/web/src/app/components/about/about.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/about/about.component.html
@@ -25,7 +25,7 @@
     <mat-list>
       <mat-tab-group class="text">
         <mat-tab label="Обновления в текущей версии">
-          <label>Версия релиза 0.2.52 beta 1</label><br>
+          <label>Версия релиза 0.2.55 beta 2</label><br>
           <label>Обновления</label>
           <mat-list role="list">
             <mat-list-item role="listitem">Теперь вы можете создавать плейлисты</mat-list-item>
@@ -36,6 +36,7 @@
             <mat-list-item role="listitem">Треки автоматически переключаются при проигрывании</mat-list-item>
             <mat-list-item role="listitem">Теперь страница с музыкой открыта для незарегистрированных пользователей</mat-list-item>
             <mat-list-item role="listitem">Теперь вы можете обмениваться с пользователями сообщениями</mat-list-item>
+            <mat-list-item role="listitem">Добавлена поддержка групповых чатов</mat-list-item>
           </mat-list>
           <label>Ошибки</label>
           <mat-list role="list">
