--- a/music-cloud-web/src/main/web/src/app/components/dialogs/dialogs.component.css
+++ b/music-cloud-web/src/main/web/src/app/components/dialogs/dialogs.component.css
@@ -1,3 +1,12 @@
 .dialogs {
     cursor: pointer;
 }
+
+.modal-window-buttons {
+    display: flex;
+    justify-content: center;
+}
+
+.modal-window-text-item {
+    text-align: center;
+}
