--- a/music-cloud-web/src/main/web/src/app/components/dialogs/dialogs.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/dialogs/dialogs.component.html
@@ -3,9 +3,11 @@
     <mat-list-item *ngFor="let dialog of dialogs" (click)="openDialog(dialog.id)">
       <mat-icon mat-list-icon>chat</mat-icon>
       <h4 mat-line>{{dialog.name}}</h4>
-      <p mat-line> {{dialog.messages.pop().text}} </p>
+      <p  *ngIf="dialog.messages.length > 0" mat-line>{{dialog.messages.pop().text}}</p>
       <span>{{dialog.time.toDate() | date}}</span>
     </mat-list-item>
+    <button  mat-raised-button color="primary" class="modal-window-buttons" style="margin-left: 10px" (click)="createDialog()">Создать диалог</button>
+    <br>
     <span *ngIf="dialogs.length === 0">У вас пока нет диалогов,
         перейдите на страницу другого пользователя и нажмите кнопку начать диалог для начала беседы</span>
     <mat-divider></mat-divider>
