--- a/music-cloud-web/src/main/web/src/app/components/about/about.component.html
+++ b/music-cloud-web/src/main/web/src/app/components/about/about.component.html
@@ -25,7 +25,7 @@
     <mat-list>
       <mat-tab-group class="text">
         <mat-tab label="Обновления в текущей версии">
-          <label>Версия релиза 0.2.60 beta 2</label><br>
+          <label>Версия релиза 0.2.61 beta 2</label><br>
           <label>Обновления</label>
           <mat-list role="list">
             <mat-list-item role="listitem">Теперь вы можете создавать плейлисты</mat-list-item>
@@ -46,7 +46,8 @@
             <mat-list-item role="listitem">Исправлена возможность оценки трека на странице музыки</mat-list-item>
             <mat-list-item role="listitem">Исправлено возникновение окна авторизации при отображении файлов с музыкой или картинками</mat-list-item>
             <mat-list-item role="listitem">Исправлено неккоректное создание диалогов</mat-list-item>
-            <mat-list-item role="listitem">Исправлен аглоадинг файлов</mat-list-item>
+            <mat-list-item role="listitem">Исправлен аплоадинг файлов</mat-list-item>
+            <mat-list-item role="listitem">Исправлено изменение позиции сущности в списке при обновлении страницы</mat-list-item>
           </mat-list>
         </mat-tab>
         <mat-tab label="Результаты тестирования рекомендательной системы">
